Привязка сетки salvattore на главную для новостей

--- a/index.html
+++ b/index.html
@@ -184,70 +184,6 @@
 <!-- NEWS -->
 			<section class="panel news row 0%">
 				<h2 id="content" class="block-title 12u$">News</h2>
-				<div class="6u 12u$(xsmall) news-snip hor-image">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/1.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.5s">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/2.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-				<div class="6u 12u$(xsmall) news-snip wow fadeIn">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/3.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip hor-image wow fadeIn" data-wow-delay="0.5s">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/4.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
 
 				<!-- NEWS-BANNER -->
 				<banner class="12u$ news-snip fit wow fadeIn">
@@ -266,64 +202,130 @@
 					</div>
 				</banner>
 
-				<div class="6u 12u$(xsmall) news-snip hor-image wow fadeIn">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/6.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+				<div class="12$ salvattore-2col" data-columns>
+					<div class="item">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/1.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.5s">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/7.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+					<div class="item wow fadeIn" data-wow-delay="0.5s">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/2.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
-				</div>
-				<div class="6u 12u$(xsmall) news-snip wow fadeIn">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/8.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+					<div class="item wow fadeIn">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/3.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip hor-image wow fadeIn" data-wow-delay="0.5s">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/9.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+					<div class="item wow fadeIn" data-wow-delay="0.5s">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/4.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item wow fadeIn">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/6.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item wow fadeIn" data-wow-delay="0.5s">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/7.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item wow fadeIn">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/8.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item wow fadeIn" data-wow-delay="0.5s">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/9.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -536,8 +538,14 @@
 		<!-- WOWJS -->
 		<script src="assets/js/wowjs/wow.min.js"></script>
 
+		<!-- SALVATORE -->
+		<script src="assets/js/salvattore/salvattore.js"></script>
+
 		<!-- MAINJS -->
 		<script src="assets/js/main.js"></script>
+
+		<!-- New scripts -->
+		<script src="assets/js/scripts.js"></script>
 
 	</body>
 </html>
