Доделки меню и страниц буклета и новости

--- a/booklet.html
+++ b/booklet.html
@@ -74,10 +74,10 @@
 					<li id="lang"><a></a></li>
 				</ul>
 				<ul class="nav-social">
-					<li class="telegram"><a></a></li>
-					<li class="insta"><a></a></li>
-					<li class="vk"><a></a></li>
-					<li class="fb"><a></a></li>
+					<li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+					<li class="insta"><a href="https://www.instagram.com/annanova_gallery/"></a></li>
+					<li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+					<li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
 				</ul>
 			</div>
 			<div class="nav-footer">
@@ -91,47 +91,13 @@
 		<section id="banner" class="fadeIn">
 
 			<div class="carousel-booklet">
-
-				<!-- <div class="sub-scroll-menu">
-					<h4 class="item"><a onclick="$('#news').animatescroll();">NEWS</a></h4>
-					<h4 class="item"><a onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
-					<h4 class="item"><a onclick="$('#info').animatescroll();">INFO</a></h4>
-				</div> -->
-
-				<!-- <div class="static-banner-logo">
-					<div class="lg-black"></div>
-				</div> -->
-
 				<div class="carousel-cell" data-flickity-bg-lazyload="images/4.jpg">
 					<div class="banner-center-title">
 						<h2>BOOKLET</h2>
 						<h2 class="small-label">the magazine of Anna Nova gallery</h2>
 					</div>
-					<!-- <div class="banner-title">
-						<h2><a href="">Issue #7</a></h2>
-						<h2 class="banner-subtitle">MAIN ARTIST: ALJOSCHA</h2>
-					</div> -->
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
-					<!-- <div class="banner-mask"></div> -->
-				</div>
-				<div class="carousel-cell" data-flickity-bg-lazyload="images/4.jpg">
-					<div class="banner-title">
-						<h2><a href="">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h2>
-						<h2 class="banner-subtitle">#EXHIBITION</h2>
-					</div>
-					<div class="mask-cursor-left"></div>
-					<div class="mask-cursor-right"></div>
-					<!-- <div class="banner-mask"></div> -->
-				</div>
-				<div class="carousel-cell" data-flickity-bg-lazyload="images/4.jpg">
-					<div class="banner-title">
-						<h2><a href="">Issue #7</a></h2>
-						<h2 class="banner-subtitle">MAIN ARTIST: ALJOSCHA</h2>
-					</div>
-					<div class="mask-cursor-left"></div>
-					<div class="mask-cursor-right"></div>
-					<!-- <div class="banner-mask"></div> -->
 				</div>
 			</div>
 		</section>
