--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 					<li id="lang"><a></a></li>
 				</ul>
 				<ul class="nav-social">
-					<li class="telegram"><a></a></li>
-					<li class="insta"><a></a></li>
-					<li class="vk"><a></a></li>
-					<li class="fb"><a></a></li>
+					<li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+					<li class="insta"><a href="https://www.instagram.com/annanova_gallery/"></a></li>
+					<li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+					<li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
 				</ul>
 			</div>
 			<div class="nav-footer">
