Правки и переработки по всем страницам

--- a/booklet.html
+++ b/booklet.html
@@ -48,7 +48,7 @@
 
 <!-- HEADER -->
 		<header id="header" class="">
-			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
+			<a id="an-backtotop" class="lg-black" href="http://annanova-gallery.ru" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
 				<h4 class="item"><a href="#banner" onclick=""></a></h4>
 				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">ARTICLES</a></h4>
@@ -61,7 +61,7 @@
 <!-- NAV -->
 		<nav id="nav">
 			<div class="nav-content">
-				<a class="lg-black only-small only-xsmall" href="index.html"></a>
+				<a class="lg-black only-small only-xsmall" href="http://annanova-gallery.ru"></a>
 				<ul class="links align-right">
 					<li><a href="artists.html">ARTISTS</a></li>
 					<li><a>EXHIBITIONS</a></li>
@@ -228,22 +228,18 @@
 <!-- PARTNERS -->
 			<section class="panel partners thin-block">
 				<h2 class="align-center">BOOKLET THANKS TO THE FOLLOWING FOR THEIR SUPPORT:</h2>
-				<ul class="row" data-wow-delay="">
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/1.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/2.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/3.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/4.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/5.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/4.png"></a></li>
-				</ul>
-				<ul class="row" data-wow-delay="">
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/1.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/2.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/3.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/4.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/5.png"></a></li>
-					<li class="2u 3u(small) 4u(xsmall) image"><a href="*"><img src="images/partners/4.png"></a></li>
-				</ul>
+				<div class="holder">
+					<div class="item image"><a href="*"><img src="images/partners/1.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/2.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/3.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/4.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/5.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/1.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/2.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/3.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/4.png"></a></div>
+					<div class="item image"><a href="*"><img src="images/partners/5.png"></a></div>
+				</div>
 			</section>
 			<hr class="trans" />
 
@@ -448,7 +444,7 @@
 		<footer id="footer">
 			<div class="row 0%">
 				<div class="4u 12u(xsmall) fit align-left(">
-					<h4>PARTNERSHIP</h4>
+					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
 					<p><a href="">For collectors, designers, museums, etc.</a></p>
 				</div>
 				<div class="4u 12u(xsmall) align-center">
