--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 
 <!-- HEADER -->
 		<header id="header" class="">
-			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
+			<a id="an-backtotop" class="lg-black" href="http://annanova-gallery.ru" onclick="$('#top').animatescroll();"></a>
 			<a href="#nav" id="header-nav"></a>
 		</header>
 
 <!-- NAV -->
 		<nav id="nav">
 			<div class="nav-content">
-				<a class="lg-black only-small only-xsmall" href="index.html"></a>
+				<a class="lg-black only-small only-xsmall" href="http://annanova-gallery.ru"></a>
 				<ul class="links align-right">
 					<li><a href="artists.html">ARTISTS</a></li>
 					<li><a>EXHIBITIONS</a></li>
@@ -134,32 +134,26 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="carousel-cell" style="background-image: url(images/1.jpg)"> -->
 				<div class="carousel-cell" data-flickity-bg-lazyload="images/1.jpg">
 					<div class="banner-title">
 						<h2><a href="">Street art by STAS BAGS<br>14.08−5.09</a></h2>
 					</div>
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
-					<div class="banner-mask"></div>
 				</div>
-				<!-- <div class="carousel-cell" style="background-image: url(images/2.jpg)"> -->
 				<div class="carousel-cell" data-flickity-bg-lazyload="images/2.jpg">
 					<div class="banner-title">
 						<h2><a href="">Pavel Brat. Paper art<br>7.06−1.09</a></h2>
 					</div>
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
-					<div class="banner-mask"></div>
 				</div>
-				<!-- <div class="carousel-cell" style="background-image: url(images/3.jpg)"> -->
 				<div class="carousel-cell" data-flickity-bg-lazyload="images/3.jpg">
 					<div class="banner-title">
 						<h2><a href="">Robert Longo<br>7.06−1.09</a></h2>
 					</div>
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
-					<div class="banner-mask"></div>
 				</div>
 			</div>
 		</section>
@@ -480,7 +474,7 @@
 		<footer id="footer">
 			<div class="row 0%">
 				<div class="4u 12u(xsmall) fit align-left(">
-					<h4>PARTNERSHIP</h4>
+					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
 					<p><a href="">For collectors, designers, museums, etc.</a></p>
 				</div>
 				<div class="4u 12u(xsmall) align-center">
