--- a/news-item.html
+++ b/news-item.html
@@ -62,14 +62,14 @@
 
 <!-- HEADER -->
 		<header id="header" class="sticky">
-			<a class="lg-black" href="index.html"></a>
+			<a class="lg-black" href="http://annanova-gallery.ru"></a>
 			<a href="#nav" id="header-nav"></a>
 		</header>
 
 <!-- NAV -->
 		<nav id="nav">
 			<div class="nav-content">
-				<a class="lg-black only-small only-xsmall" href="index.html"></a>
+				<a class="lg-black only-small only-xsmall" href="http://annanova-gallery.ru"></a>
 				<ul class="links align-right">
 					<li><a href="artists.html">ARTISTS</a></li>
 					<li><a>EXHIBITIONS</a></li>
@@ -258,7 +258,7 @@
 		<footer id="footer">
 			<div class="row 0%">
 				<div class="4u 12u(xsmall) fit align-left(">
-					<h4>PARTNERSHIP</h4>
+					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
 					<p>For collectors, designers, museums, etc.</p>
 				</div>
 				<div class="4u 12u(xsmall) align-center">
