--- a/author.html
+++ b/author.html
@@ -49,7 +49,7 @@
 
 <!-- HEADER -->
 		<header id="header" class="">
-			<a id="an-backtotop" class="lg-white" href="index.html" onclick="$('#top').animatescroll();"></a>
+			<a id="an-backtotop" class="lg-white" href="http://annanova-gallery.ru" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
 				<h4 class="item"><a href="#b-author-banner" onclick=""></a></h4>
 				<h4 class="item"><a href="#bio" onclick="$('#bio').animatescroll();">BIO</a></h4>
@@ -62,7 +62,7 @@
 <!-- NAV -->
 		<nav id="nav">
 			<div class="nav-content">
-				<a class="lg-black only-small only-xsmall" href="index.html"></a>
+				<a class="lg-black only-small only-xsmall" href="http://annanova-gallery.ru"></a>
 				<ul class="links align-right">
 					<li><a href="artists.html">ARTISTS</a></li>
 					<li><a>EXHIBITIONS</a></li>
@@ -442,7 +442,7 @@
 		<footer id="footer">
 			<div class="row 0%">
 				<div class="4u 12u(xsmall) fit align-left(">
-					<h4>PARTNERSHIP</h4>
+					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
 					<p><a href="">For collectors, designers, museums, etc.</a></p>
 				</div>
 				<div class="4u 12u(xsmall) align-center">
