--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 							<span class="news-snip-date">08.08.2016</span>
 						</div>
 					</div>
-					<div class="item wow fadeIn" data-wow-delay="0.5s">
+					<div class="item wow fadeIn" data-wow-delay="0.25s">
 						<span class="news-snip-last">LAST NEWS</span>
 						<a href="" title="Read" class="image fit">
 							<img src="images/news/2.png">
@@ -245,7 +245,7 @@
 							<span class="news-snip-date">08.08.2016</span>
 						</div>
 					</div>
-					<div class="item wow fadeIn" data-wow-delay="0.5s">
+					<div class="item wow fadeIn" data-wow-delay="0.15s">
 						<span class="news-snip-last">LAST NEWS</span>
 						<a href="" title="Read" class="image fit">
 							<img src="images/news/4.png">
@@ -276,7 +276,7 @@
 							<span class="news-snip-date">08.08.2016</span>
 						</div>
 					</div>
-					<div class="item wow fadeIn" data-wow-delay="0.5s">
+					<div class="item wow fadeIn" data-wow-delay="0.2s">
 						<a href="" title="Read" class="image fit">
 							<img src="images/news/7.png">
 						</a>
@@ -306,7 +306,7 @@
 							<span class="news-snip-date">08.08.2016</span>
 						</div>
 					</div>
-					<div class="item wow fadeIn" data-wow-delay="0.5s">
+					<div class="item wow fadeIn" data-wow-delay="0.15s">
 						<a href="" title="Read" class="image fit">
 							<img src="images/news/9.png">
 						</a>
@@ -330,7 +330,7 @@
 				<h2 id="content" class="block-title">Projects</h2>
 				<div class="row 0%">
 					<div class="3u 12u$(xsmall)">
-						<div class="projects-snip white wow fadeInUp" data-wow-delay="0">
+						<div class="projects-snip white wow fadeInUp" data-wow-delay="0.15s">
 							<a href="">
 								<span class="image fit">
 									<img src="images/projects/p1.png">
@@ -341,7 +341,7 @@
 						</div>
 					</div>
 					<div class="3u 12u$(xsmall)">
-						<div class="projects-snip wow fadeInUp" data-wow-delay="0.5s">
+						<div class="projects-snip wow fadeInUp" data-wow-delay="0.2s">
 							<a href="">
 								<span class="image fit">
 									<img src="images/projects/p2.png">
@@ -352,7 +352,7 @@
 						</div>
 					</div>
 					<div class="3u 12u$(xsmall)">
-						<div class="projects-snip wow fadeInUp" data-wow-delay="1s">
+						<div class="projects-snip wow fadeInUp" data-wow-delay="0.25s">
 							<a href="">
 								<span class="image fit">
 									<img src="images/projects/p3.png">
@@ -363,7 +363,7 @@
 						</div>
 					</div>
 					<div class="3u 12u$(xsmall)">
-						<div class="projects-snip wow fadeInUp" data-wow-delay="1.5s">
+						<div class="projects-snip wow fadeInUp" data-wow-delay="0.25s">
 							<a href="">
 								<span class="image fit">
 									<img src="images/projects/p4.png">
