--- a/booklet.html
+++ b/booklet.html
@@ -41,7 +41,7 @@
 		</style>
 	</head>
 
-	<body id="top" class="booklet-page all-black-theme">
+	<body id="top" class="booklet-page second-screen">
 
 <!-- LOADER -->
 		<div class="an-loader"><span class="an-loader-img"></span></div>
