Стили project.html

--- a/project.html
+++ b/project.html
@@ -135,63 +135,63 @@
 
 <!-- WORKS -->
 			<section id="works" class="b-works flex-images">
-				<div class="item" data-w="237" data-h="300">
+				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
-				</div>
-				<div class="item" data-w="199" data-h="299">
+				</a>
+				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
-				</div>
-				<div class="item" data-w="240" data-h="300">
+				</a>
+				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
-				</div>
-				<div class="item" data-w="378" data-h="300">
+				</a>
+				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
-				</div>
-				<div class="item" data-w="389" data-h="300">
+				</a>
+				<a class="item" data-w="389" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/7.jpg">
-				</div>
-				<div class="item" data-w="237" data-h="300">
+				</a>
+				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
-				</div>
-				<div class="item" data-w="199" data-h="299">
+				</a>
+				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
-				</div>
-				<div class="item" data-w="240" data-h="300">
+				</a>
+				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
-				</div>
-				<div class="item" data-w="378" data-h="300">
+				</a>
+				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
-				</div>
-				<div class="item" data-w="389" data-h="300">
+				</a>
+				<a class="item" data-w="389" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/7.jpg">
-				</div>
-				<div class="item" data-w="237" data-h="300">
+				</a>
+				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
-				</div>
-				<div class="item" data-w="199" data-h="299">
+				</a>
+				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
-				</div>
-				<div class="item" data-w="240" data-h="300">
+				</a>
+				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
-				</div>
-				<div class="item" data-w="378" data-h="300">
+				</a>
+				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
-				</div>
-				<div class="item" data-w="389" data-h="300">
+				</a>
+				<a class="item" data-w="389" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/7.jpg">
-				</div>
-				<div class="item" data-w="237" data-h="300">
+				</a>
+				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
-				</div>
-				<div class="item" data-w="199" data-h="299">
+				</a>
+				<a class="item" data-w="199" data-h="299">
 					<img src="images/author/2.jpg">
-				</div>
-				<div class="item" data-w="240" data-h="300">
+				</a>
+				<a class="item" data-w="240" data-h="300">
 					<img src="images/author/3.jpg">
-				</div>
-				<div class="item" data-w="378" data-h="300">
+				</a>
+				<a class="item" data-w="378" data-h="300">
 					<img src="images/author/5.jpg">
-				</div>
+				</a>
 			</section>
 
 		</div>
@@ -231,9 +231,9 @@
 						<div class="name">More projects by<br><a href="#">ULDUZ BAKHTIOZINA</a></div>
 					</div>
 					<div class="item">
-						<a class="image" data-fancybox data-src="#project1" href="javascript://">
+						<div class="image">
 							<img src="images/author/10.jpg">
-						</a>
+						</div>
 						<div class="name">We must cultivate our garden</div>
 						<div class="project-date">28.04 - 29.08.2015</div>
 					</div>
@@ -307,13 +307,12 @@
 				</ul>
 			</div>
 		</div>
-		<span class="control-btn prev">
-			<img src="images/project/modal-prev.png" class="icon">
-		</span>
-		<span class="control-btn next">
-			<img src="images/project/modal-next.png" class="icon">
-		</span>
-		<div class="close-modal"></div>
+		<div class="control-btn prev">
+			<img src="images/project/arrow-2.svg" class="icon" id="next">
+		</div>
+		<div class="control-btn next">
+			<img src="images/project/arrow-2.svg" class="icon" id="prev">
+		</div>
 	</div>
 </div>
 
